--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-db": "pg_ctl start -D /path_to_your_data_directory",
-    "stop-db": "pg_ctl stop -D /path_to_your_data_directory",
-    "server": "node server.js",
+    "test": "ls",
+
+    "pg:init": "node scripts/pg-init.js",
+    "pg:start": "node scripts/pg-start.js",
+    "pg:stop": "node scripts/pg-stop.js",
+    "pg:restart": "npm run pg:stop && npm run pg:start",
+
+    "prod": "node server.js",
     "dev": "nodemon server.js",
-    "start-server": "npm run start-db && npm run server",
-    "start-dev": "npm run start-db && npm run dev",
+    "start": "npm run pg:start && npm run dev",
+
     "migrate:up": "node-pg-migrate up -e dev --config ./migrate-config.js",
     "migrate:down": "node-pg-migrate down -e dev --config ./migrate-config.js"
   },
@@ -25,6 +30,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
+    "dotenv-cli": "^7.3.0",
     "nodemon": "^3.0.1"
   }
 }
