--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,7 @@
     "express": "^4.18.2",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
-    "pg-pool": "^3.6.1",
-    "pg-promise": "^11.5.4"
+    "pg-pool": "^3.6.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
