--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ls",
     "pg:init": "node scripts/pg-init.js",
     "pg:start": "node scripts/pg-start.js",
     "pg:stop": "node scripts/pg-stop.js",
-    "pg:restart": "npm run pg:stop && npm run pg:start",
-    "prod": "node server.js",
+    "pg:restart": "yarn pg:stop && yarn pg:start",
+    "build_prod": "node server.js",
     "dev": "nodemon server.js",
-    "start": "npm run pg:start && npm run dev",
+    "start": "yarn pg:start && yarn dev",
     "migrate:up": "node-pg-migrate up -e dev --config ./migrate-config.js",
     "migrate:down": "node-pg-migrate down -e dev --config ./migrate-config.js",
     "migrate": "node-pg-migrate"
