--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "pg:start": "node scripts/pg-start.js",
     "pg:stop": "node scripts/pg-stop.js",
     "pg:restart": "yarn pg:stop && yarn pg:start",
-    "build_prod": "node server.js",
+    "build": "npm install yarn && yarn install --dev",
+    "start": "yarn node server.js",
     "dev": "nodemon server.js",
     "start": "yarn pg:start && yarn dev",
     "migrate:up": "node-pg-migrate up -e dev --config ./migrate-config.js",
