--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "pg:start": "node scripts/pg-start.js",
     "pg:stop": "node scripts/pg-stop.js",
     "pg:restart": "yarn pg:stop && yarn pg:start",
+    "build": "npm install -g yarn && yarn install",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "migrate:up": "node-pg-migrate up -e dev --config ./migrate-config.js",
