another scripts fix

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "pg:stop": "node scripts/pg-stop.js",
     "pg:restart": "yarn pg:stop && yarn pg:start",
     "build": "npm install -g yarn && yarn install",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "nodemon server.js",
+    "dev": "node server.js",
     "migrate:up": "node-pg-migrate up -e dev --config ./migrate-config.js",
     "migrate:down": "node-pg-migrate down -e dev --config ./migrate-config.js",
     "migrate": "node-pg-migrate"
